Admin Site Objects - In progress

--- a/Partition (CDV)/Functions/LW3GN01.LW3GEN.fun.yml
+++ b/Partition (CDV)/Functions/LW3GN01.LW3GEN.fun.yml
@@ -1,5 +1,5 @@
 ﻿Function:
-  Enabled For RDMLX:  No
+  Enabled For RDMLX:  Yes
 
   Source: |
     * ======================================================
